WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189454
REGRESSION (
r235153
): [iOS] Can't move selection start grabber when selecting text in a subframe
https://bugs.webkit.org/show_bug.cgi?id=189454
Summary
REGRESSION (r235153): [iOS] Can't move selection start grabber when selecting...
Wenson Hsieh
Reported
2018-09-08 15:58:57 PDT
After
r235153
, I can't move the selection start grabber when selecting text in a subframe on iOS, if the subframe isn't at the very top of the main document. To reproduce: 1. Visit
https://whsieh.github.io/examples/subframes
2. Scroll to the very bottom, where "lorem-tiny.html" is embedded in a subframe 3. Long press to select some text 4. Try to move the grabber at the start of the selection. Expected: able to change the selection by moving the grabber. Observed: the selection start grabber snaps to the character before the selection end grabber, and cannot be moved.
Attachments
Patch
(8.24 KB, patch)
2018-09-08 18:04 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-09-08 16:03:00 PDT
<
rdar://problem/44265956
>
Wenson Hsieh
Comment 2
2018-09-08 18:04:51 PDT
Created
attachment 349268
[details]
Patch
WebKit Commit Bot
Comment 3
2018-09-08 20:25:12 PDT
Comment on
attachment 349268
[details]
Patch Clearing flags on attachment: 349268 Committed
r235834
: <
https://trac.webkit.org/changeset/235834
>
WebKit Commit Bot
Comment 4
2018-09-08 20:25:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug